# nnue-pytorch

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  Dockerfile.AMD  Dockerfile.CPU  Dockerfile.NVIDIA  Makefile  README.md  build_native_bits.bat  compile_data_loader.bat  compile_data_loader.py  compile_data_loader.sh  compile_data_loader_cmake.bat  compile_data_loader_g++.bat  compression.py  config.py  convert.py  cross_check_eval.py  data_loader.cpp  dataloader_skip_config.py  dataset_base.py  ddp_launcher.py  delete_bad_nets.py  do_plots.py  docker_entrypoint.sh  eval.py  external_nnue_data.py  feature_block.py  feature_set.py  feature_transformer.py  features.py  fetch_datasets.py  ftperm.py  halfka.py  halfka_v2.py  halfka_v2_hm.py  halfkp.py  halfkp_dataset.py  (+37 more)
.github/helpers/: build_compatible_engine.py  build_engine_and_cross_check_eval.sh
.github/workflows/: build.yml  ci-orchestrator.yml  cpu-testrun.yml  cpu_testrun.yml  data-loader-test.yml  pytest.yml  ruff-pr.yml
.pgo/: small.binpack
cpp/: CMakeLists.txt  compression.cpp  training_data_loader.cpp
cpp/lib/: export.h  nnue_training_data_formats.h  nnue_training_data_stream.h  rng.h
data_loader/: __init__.py  _native.py  config.py  dataset.py  stream.py
data_loader/cpp/: CMakeLists.txt  data_loader_config.ini  nnue_macros.h  training_data_loader.cpp  training_data_loader_abi.cpp  training_data_loader_abi.h  training_data_loader_bench.cpp  training_data_loader_internal.h  training_data_loader_report.cpp  training_data_loader_structs.h
data_loader/cpp/lib/: arithmetic.h  binpack.h  chess.h  nnue_training_data_formats.h  nnue_training_data_stream.h  nodchip.h  parallel_dataloader.h  rng.h  thread_id.h  thread_local_structs.h  thread_safe_types.h  training_data_entry.h
ddp_utils/: __init__.py  ddp_init.py  set_smart_precision.py
docs/: features.md  network_storage_format.md  nnue.md
docs/img/: A-768-8-8-1.drawio  HalfKAv2-45056-256x2P1x2-32-32-1.drawio  HalfKAv2-45056-256x2P8x2[-32-32-1]x8.drawio  HalfKP-40960-256x2-32-32-1.drawio  HalfKP-40960-4x2-8-1.drawio  SF15a_architecture.drawio  SFNNv10_architecture.drawio  SFNNv10_architecture_detailed.drawio  SFNNv10_architecture_detailed_v2.drawio  SFNNv11_architecture.drawio  SFNNv11_architecture_detailed.drawio  SFNNv11_architecture_detailed_v2.drawio  SFNNv12_architecture.drawio  SFNNv12_architecture_detailed.drawio  SFNNv12_architecture_detailed_v2.drawio  SFNNv13_architecture.drawio  SFNNv13_architecture_detailed.drawio  SFNNv13_architecture_detailed_v2.drawio  SFNNv1_architecture_detailed.drawio  SFNNv1_architecture_detailed_v2.drawio  SFNNv2_architecture.drawio  SFNNv2_architecture_detailed.drawio  SFNNv2_architecture_detailed_v2.drawio  SFNNv3_architecture.drawio  SFNNv3_architecture_detailed.drawio  SFNNv3_architecture_detailed_v2.drawio  SFNNv4_architecture.drawio  SFNNv4_architecture_detailed.drawio  SFNNv4_architecture_detailed_v2.drawio  SFNNv5_architecture.drawio  SFNNv5_architecture_detailed.drawio  SFNNv5_architecture_detailed_v2.drawio  SFNNv6_architecture.drawio  SFNNv6_architecture_detailed.drawio  SFNNv6_architecture_detailed_v2.drawio  SFNNv7_architecture.drawio  SFNNv7_architecture_detailed.drawio  SFNNv7_architecture_detailed_v2.drawio  SFNNv8_architecture.drawio  SFNNv8_architecture_detailed.drawio  (+13 more)
features/: __init__.py  feature_set.py  halfka.py  halfka_v2.py  halfka_v2_hm.py  halfkp.py
lib/: nnue_training_data_formats.h  nnue_training_data_stream.h  rng.h
model/: __init__.py  callbacks.py  config.py  feature_transformer.py  lambda_utils.py  lightning_module.py  metal_support.py  model.py  quantize.py  utils.py
model/features/: __init__.py  feature_block.py  feature_set.py  full_threats.py  halfka.py  halfka_v2.py  halfka_v2_hm.py  halfkp.py
model/layers/: __init__.py  layer_stacks.py  stacked_linear.py
model/layers/feature_transformer/: __init__.py  functions.py  module.py
model/modules/: __init__.py  config.py  layer_stacks.py  stacked_linear.py
model/modules/feature_transformer/: __init__.py  functions.py  fused_ft_kernel.py  fused_functions.py  fused_kernels.py  kernel.py  module.py  sparse_linear_kernel.py
model/modules/feature_transformer/metal/: __init__.py  l0_mixing.metal  loss.metal  optimizer.metal  sparse_linear.metal  sparse_linear.mm  sparse_linear_backward_cas.metal  sparse_linear_backward_native.metal  stacked_linear.metal
model/modules/features/: __init__.py  composed.py  full_threats.py  full_threatsv2.py  halfka_v2_hm.py  input_feature.py  k16q2.py
model/optimizers/: __init__.py  config.py  fused_ranger21.py  optimizer_config.py  ranger21_native.py  ranger21_wrapper.py  ranger_lite.py  rangerlite_wrapper.py  schedulefree_wrapper.py
model/param_freezing/: config.py  freezer.py
model/utils/: __init__.py  coalesce_weights.py  load_model.py  serialize.py
scripts/: delete_bad_nets.sh  do_plots.sh  do_plots_split.sh  easy_train.py  easy_train_example.bat  easy_train_example.sh  gensfen.sh  rename_net.sh  run_games.sh  run_with_custom_malloc.sh  train.sh
scripts/1/: README.md  config.sh  delete_bad_nets.py  delete_bad_nets.sh  do_plots.py  do_plots.sh  do_plots_split.sh  run_games.py  run_games.sh  setup_experiment.sh  train.sh  train_continuous.sh
tests/: bench_feature_transformer.py  nnue_reader_writer_test.py  test_ddp_loader.py  test_feature_transformer.py  test_fused_double_ft.py  test_metal_equivalence.py  test_metal_sparse_linear.py  test_sparse_linear_device_parity.py  test_training_pipeline_run.py
